<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr01_20171.lab2.Registrarse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registro"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/text_size_title"/>


                <EditText
                    android:id="@+id/et_reg_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName" />


                <EditText
                    android:id="@+id/et_reg_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/r_contraseña"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_reg_contraseña2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/r_contraseña2"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_reg_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/linearLayout"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btm_reg_aceptar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="clickAceptar"
                        android:text="@string/aceptar" />
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

    </LinearLayout>

</LinearLayout>
