<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr01_20171.lab2.VisualizarEvento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_nombre_vis_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/nombre_evento"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_responsable_vis_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/responsable_evento"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_informacion_vis_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/informacion_evento"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_fecha_vis_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/fecha_evento"
                    android:inputType="date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_latitud_vis_evento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/latitud_evento"
                        android:inputType="number|numberSigned|numberDecimal" />

                    <EditText
                        android:id="@+id/et_longitud_vis_evento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/longitud_evento"
                        android:inputType="number|numberSigned|numberDecimal" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/puntuacion_evento" />

                <RatingBar
                    android:id="@+id/rb_puntuacion_vis_evento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:isIndicator="true"
                    android:numStars="@integer/limite_rating"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_foto_vis_evento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_googlemaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="clickGoogleMaps"
                        android:text="@string/google_maps" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
